fix overflow issue
will add js to make product section scrollable horizontally later

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -239,6 +239,10 @@ Womens and mens jackets
 
     min-height: 33vh;
     width: 100%;
+
+    @media only screen and (min-width: 360px) and (max-width: 768px) {
+        overflow: hidden;
+    }
 }
 
 .womens-container h4 {
@@ -273,6 +277,10 @@ Womens and mens jackets
 
     min-height: 33vh;
     width: 100%;
+
+    @media only screen and (min-width: 360px) and (max-width: 768px) {
+        overflow: hidden;
+    }
 }
 
 .mens-container h4 {
